Upgrade to Openjfx 22,  controlsfx 11.2.1 (#211)